# should-ai

./: .gitignore  CHANGELOG.md  README.md  example.py  pyproject.toml  should.py  should_example.py
.github/workflows/: publish.yml
shouldpy/: __init__.py  should.py
